handwave align fix

--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,9 @@ html, body {
 }
 
 @media (max-width: 768px) {
+  html, body {
+    overflow: hidden;
+  }
   html .sorry-notif, body .sorry-notif {
     display: none;
   }
@@ -337,7 +340,7 @@ a:link:hover {
 
 .container .name-set-modal {
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   left: 0;
   right: 0;
   top: 5%;
@@ -363,10 +366,10 @@ a:link:hover {
 .container .name-set-modal div:empty {
   z-index: -1;
   position: absolute;
-  top: -100%;
-  right: -30%;
-  bottom: -400%;
-  left: -100%;
+  top: -100vh;
+  right: -100vw;
+  bottom: -100vh;
+  left: -100vw;
 }
 
 .container .name-set-modal::before {
@@ -378,7 +381,6 @@ a:link:hover {
   -webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.17);
           box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.17);
   bottom: 100.5%;
-  left: 25px;
 }
 
 .container .name-set-modal::after {
@@ -581,6 +583,11 @@ div.home #greet {
 div.home #greet span:first-child {
   font-weight: 400;
   font-size: 35px;
+}
+
+div.home #greet span:first-child #handwave {
+  font-size: 27px;
+  vertical-align: 4px;
 }
 
 div.home #greet span#dev-name {
